# vClip

./: .gitignore  CLAUDE.md  LICENSE  PUBLISHING.md  README.md  opindex  pyproject.toml  requirements.txt  setup.py  test_autopaste.py  vclip  verify_installation.py
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
cmd_manager/: __init__.py  cache.py  cli.py  clipboard.py  config.py  lint.py  parser.py  rofi.py  variables.py
config/: config.yaml
docs/: opindex-agent-skill-spec.md  opindex-note-standard.md
test_data/: sample.md
test_data/skill-forward-test/: azure-cli-session.txt  azure-cli.md
tests/: __init__.py  test_clipboard.py  test_config.py  test_lint.py  test_parser.py  test_variable_substitution_mode.py
